--- a/career.html
+++ b/career.html
@@ -67,7 +67,8 @@
     
     
             <div class="seeking-stars-grid">
-                <a href="https://jobs.lever.co/paytm?department=Analytics" class="grid-item" style="background: #e5f9ff">
+                <a href="https://jobs.lever.co/paytm?department=Analytics" 
+                class="grid-item" style="background: #e5f9ff">
                     <div class="img1">
                         <img src="https://assetscdn1.paytm.com/images/catalog/view_item/1811266/1689262054395.png">
                     </div>
